--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "showdown"
   ],
   "devDependencies": {
+    "@types/ember": "^2.8.22",
+    "@types/ember-data": "^2.14.16",
+    "@types/ember-qunit": "^3.0.2",
+    "@types/ember-test-helpers": "^0.7.1",
+    "@types/ember-testing-helpers": "^0.0.3",
+    "@types/qunit": "^2.5.0",
+    "@types/rsvp": "^4.0.1",
     "babel-eslint": "^8.0.3",
     "broccoli-asset-rev": "^2.4.5",
     "broccoli-filter": "^1.2.4",
@@ -35,15 +42,16 @@
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-showdown": "^4.1.1",
+    "ember-cli-typescript": "^1.2.1",
     "ember-cli-uglify": "^2.0.0",
     "ember-composable-helpers": "2.0.3",
     "ember-concurrency": "0.8.12",
     "ember-data": "~3.1.1",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "7.5.0",
     "ember-network": "0.3.1",
-    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
     "ember-route-action-helper": "2.0.6",
     "ember-simple-auth": "1.4.2",
@@ -57,7 +65,8 @@
     "liquid-fire": "~0.29.1",
     "loader.js": "^4.2.3",
     "semver": "^5.3.0",
-    "showdown": "1.8.6"
+    "showdown": "1.8.6",
+    "typescript": "^2.8.3"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
