--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "ember-network": "0.3.1",
     "ember-resolver": "^4.0.0",
     "ember-route-action-helper": "2.0.6",
+    "ember-service-worker": "^0.6.9",
+    "ember-service-worker-asset-cache": "^0.6.2",
+    "ember-service-worker-cache-fallback": "^0.6.1",
+    "ember-service-worker-index": "^0.6.3",
     "ember-simple-auth": "1.4.2",
     "ember-source": "~2.17.0",
     "ember-state-services": "4.0.0",
@@ -56,7 +60,7 @@
     "eslint-plugin-ember-suave": "^1.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "greenkeeper-lockfile": "^1.12.0",
-    "liquid-fire": "~0.29.1",
+    "liquid-fire": "^0.29.2",
     "loader.js": "^4.2.3",
     "semver": "^5.3.0",
     "showdown": "1.5.1",
