--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "showdown"
   ],
   "devDependencies": {
+    "@ember-decorators/babel-transforms": "^2.0.0",
     "@types/ember": "^2.8.22",
     "@types/ember-data": "^2.14.16",
     "@types/ember-qunit": "^3.0.2",
@@ -47,6 +48,7 @@
     "ember-composable-helpers": "2.0.3",
     "ember-concurrency": "0.8.12",
     "ember-data": "~3.1.1",
+    "ember-decorators": "^2.0.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
