--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-showdown": "^4.1.1",
+    "ember-cli-sri": "^2.1.1",
     "ember-cli-typescript": "^1.2.1",
     "ember-cli-uglify": "^2.0.0",
     "ember-composable-helpers": "2.0.3",
