--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
+    "ember-cli-fastboot": "^1.1.4-beta.1",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -49,6 +50,7 @@
     "ember-composable-helpers": "2.0.3",
     "ember-concurrency": "0.8.12",
     "ember-data": "~3.1.1",
+    "ember-data-fastboot": "^0.1.2",
     "ember-decorators": "^2.0.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
@@ -57,6 +59,10 @@
     "ember-network": "0.3.1",
     "ember-resolver": "^4.0.0",
     "ember-route-action-helper": "2.0.6",
+    "ember-service-worker": "^0.6.12",
+    "ember-service-worker-asset-cache": "^0.6.2",
+    "ember-service-worker-cache-fallback": "^0.6.1",
+    "ember-service-worker-index": "^0.6.6",
     "ember-simple-auth": "1.4.2",
     "ember-source": "~3.1.1",
     "ember-state-services": "4.0.0",
