Addressable, Draft & Persisted state

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ember-cli-uglify": "^2.0.0",
     "ember-composable-helpers": "2.0.3",
     "ember-concurrency": "0.8.12",
-    "ember-data": "~3.1.1",
+    "ember-data": "^2",
     "ember-data-fastboot": "^0.1.2",
     "ember-decorators": "^2.0.0",
     "ember-export-application-global": "^2.0.0",
@@ -64,7 +64,7 @@
     "ember-service-worker-cache-fallback": "^0.6.1",
     "ember-service-worker-index": "^0.6.6",
     "ember-simple-auth": "1.4.2",
-    "ember-source": "~3.1.1",
+    "ember-source": "^2",
     "ember-state-services": "4.0.0",
     "ember-truth-helpers": "2.0.0",
     "eslint-plugin-babel": "^4.1.0",
