--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
-    "ember-cli-fastboot": "^1.1.4-beta.1",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -50,8 +49,8 @@
     "ember-composable-helpers": "2.0.3",
     "ember-concurrency": "0.8.12",
     "ember-data": "^3",
-    "ember-data-fastboot": "^0.1.2",
     "ember-decorators": "^2.0.0",
+    "ember-engines": "^0.5.18",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
@@ -76,5 +75,13 @@
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
-  "private": true
+  "private": true,
+  "ember-addon": {
+    "paths": [
+      "lib/auth",
+      "lib/blog",
+      "lib/commenter",
+      "lib/ui-kit"
+    ]
+  }
 }
