--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,10 +22,12 @@
             "--serve-assets"
         ],
         "cwd": "${workspaceRoot}"
-    }, {
-        "name": "Attach to Process",
-        "type": "node2",
+    }
+    ,{
+        "type": "node",
         "request": "attach",
-        "port": 5858
-    }]
+        "name": "Attach",
+        "port": 9229
+    }
+]
 }
