--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-composable-helpers": "2.0.3",
     "ember-concurrency": "0.8.12",
     "ember-data": "~3.1.1",
+    "ember-engines": "^0.5.18",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
@@ -65,5 +66,10 @@
   "private": true,
   "dependencies": {
     "@types/ember": "^2.8.22"
+  },
+  "ember-addon": {
+    "paths": [
+      "lib/articles"
+    ]
   }
 }
