--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "showdown"
   ],
   "devDependencies": {
+    "@mike-works/js-lib-renovate-config": "^2.0.0",
     "babel-eslint": "^10.0.1",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-filter": "^1.3.0",
@@ -41,9 +42,9 @@
     "ember-data": "~3.4.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "7.8.0",
     "ember-network": "0.3.1",
-    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^5.0.1",
     "ember-route-action-helper": "2.0.6",
     "ember-simple-auth": "1.7.0",
